fix bug responsive with fix process overflow

--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -269,8 +269,6 @@ body
 	padding-left 144px
 	padding-right 114px
 .article-content-wrapper
-	max-height unset
-	overflow hidden
 	p
 		font-family : garamondI;
 		font-size : 42px;
@@ -509,10 +507,6 @@ body
 		font-size 22px
 	.content-partners
 		margin-bottom 20px
-	.content-overflow-inside
-		max-height 300px
-	.content-partners-article
-		max-height 200px
 	.contact-content
 		overflow none
 		max-height unset
@@ -523,7 +517,27 @@ body
 		flex-direction column
 	#marker
 		display none
-
+@media (max-width: 575px)
+	.main
+		filter none !important
+	.content-overflow-inside
+		max-height 300px
+	.content-partners-article
+		max-height 200px
+	// .section
+	// 	display table
+	.content
+		display block
+		height auto
+		padding 0
+		margin-top 50px
+	.content-the-content
+		width 100%
+	.content-home
+		padding-top 0
+	.content-footer
+		margin-top 50px
+	
 //----- Height
 @media (min-width: 1024px ) and (max-height: 650px)
 	.content
